Fix EditForm buttonContainer alignment

--- a/packages/strapi-plugin-settings-manager/admin/src/components/ContentHeader/styles.scss
+++ b/packages/strapi-plugin-settings-manager/admin/src/components/ContentHeader/styles.scss
@@ -1,6 +1,6 @@
 .contentHeader { /* stylelint-disable */
   position: relative;
-  margin: 2.5rem 4rem;
+  margin: 2.4rem 4rem;
   font-family: Lato;
 }
 
