--- a/packages/strapi-plugin-settings-manager/admin/src/components/EditForm/styles.scss
+++ b/packages/strapi-plugin-settings-manager/admin/src/components/EditForm/styles.scss
@@ -14,8 +14,7 @@
 
 .buttonContainer {
   position: absolute;
-  top: 3rem;
+  top: 2.7rem;
   right: 3.3rem;
-  margin-top: 0.2rem;
   padding-right: 2.8rem;
 }
